<resources>
    <!-- Toolbar Title -->
    <string name="toolbar_title">Budget Brain</string>

    <!-- Fragment Titles -->
    <string name="add_transaction_title">Add Transaction</string>
    <string name="budget_title">Budget</string>
    <string name="budget_details_title">Budget Details</string>
    <string name="create_budget_title">Create Budget</string>

    <!-- EditText Hints -->
    <string name="hint_date">Date</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_category">Category</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_budget">Budget</string>
    <string name="hint_budget_name">Budget Name</string>
    <string name="hint_budget_amount">Budget Amount</string>
    <string name="hint_remaining_amount">Remaining Amount</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_savings_goal">Savings Goal</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!-- Button Texts -->
    <string name="button_save_transaction">Save Transaction</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create_budget">Create Budget</string>
    <string name="button_edit_start_date">Edit Start Date</string>
    <string name="button_edit_end_date">Edit End Date</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_google_signin">Sign in with Google</string>

    <!-- Labels -->
    <string name="label_budget_name">Budget Name</string>
    <string name="label_budget_amount">Budget Amount:</string>
    <string name="label_remaining_amount">Remaining Amount:</string>
    <string name="label_start_date">Start Date:</string>
    <string name="label_end_date">End Date:</string>
    <string name="label_spending_by_category">Spending by Category</string>
    <string name="label_budget_details">Budget Details</string>

    <!-- Login Fragment -->
    <string name="header_login">Login</string>
    <string name="link_signup">Don\'t have an account? Sign Up</string>

    <!-- Register Fragment -->
    <string name="header_signup">Sign Up</string>
    <string name="link_login">Already have an account? Log In</string>

    <!-- Home Fragment -->
    <string name="title_budgets">Budgets</string>
    <string name="title_savings_goal">Savings Goal</string>

    <!-- General -->
    <string name="savings_goal_prompt">Enter your savings Goal</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone Number</string>
    <string name="savings_goal_label">Savings Goal</string>
    <string name="notification_settings_title">Notification Settings</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="goal_notifications">Goal Notifications</string>
    <string name="budget_notifications">Budget Notifications</string>
    <string name="all_notifications">All Notifications</string>
    <string name="edit_settings">Edit</string>
    <string name="delete_account">Delete Account</string>
    <string name="save_settings">Save Settings</string>
    <string name="logout">Logout</string>

    <!-- Budget Item Layout -->
    <string name="budget_name">Budget Name</string>
    <string name="budget_amount">Amount: R0.00</string>
    <string name="budget_remaining">Remaining: R0.00</string>

    <!-- Transaction Item Layout -->
    <string name="transaction_date">15 Sep 2024</string>
    <string name="transaction_amount">$120.50</string>
    <string name="transaction_category">Groceries</string>
    <string name="linked_budget">Budget: Monthly Expenses</string>
    <string name="transaction_notes">Bought weekly groceries</string>

    <!-- Miscellaneous -->
    <string name="app_name">budgetbrain</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">515869063410-ld98msas3g2ok77vrria4qjsgdtvf680.apps.googleusercontent.com</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="english">English</string>
</resources>
