<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTransactionFragment">

    <EditText
        android:id="@+id/transactionDateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/transactionAmountEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:minHeight="48dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/transactionDateEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/transactionCategoryEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_category"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/transactionAmountEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/transactionNotesEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:hint="@string/hint_notes"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionCategoryEditText" />

    <EditText
        android:id="@+id/transactionBudget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/hint_budget_name"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionCategoryEditText" />

    <Button
        android:id="@+id/saveTransactionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/button_save_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionNotesEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>
