<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Background for Budget Item -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_border"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/budgetNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget_name"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/budgetAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_budget_amount"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/budgetRemainingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_remaining_amount"
        android:textSize="16sp"/>
</LinearLayout>

<View
android:layout_width="match_parent"
android:layout_height="1dp"
android:background="@android:color/darker_gray"
android:layout_marginTop="8dp"
android:layout_marginBottom="8dp"/>
    </LinearLayout>
