<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateBudgetFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:gravity="center"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Existing EditTexts and TextViews -->

            <EditText
                android:id="@+id/budgetNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_budget_name"
                android:minHeight="48dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/budgetAmountEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_budget_amount"
                android:minHeight="48dp"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/budgetNameEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/startlbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/budgetAmountEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_start_date"/>

            <TextView
                android:id="@+id/startValueLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/startlbl"
                app:layout_constraintStart_toStartOf="parent"
                android:text=""/>

            <Button
                android:id="@+id/startDateBtn"
                android:layout_width="wrap_content"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:text="@string/button_edit"
                app:layout_constraintTop_toTopOf="@id/startlbl"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/endlbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/startDateBtn"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_end_date"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/endValueLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/endlbl"
                app:layout_constraintStart_toStartOf="parent"
                android:text=""/>

            <Button
                android:id="@+id/endDateBtn"
                android:layout_width="wrap_content"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:text="@string/button_edit"
                app:layout_constraintTop_toTopOf="@id/endlbl"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/createBudgetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_create_budget"
                app:layout_constraintTop_toBottomOf="@id/endDateBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="25dp"/>

            <!-- Back Button -->
            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_back"
                app:layout_constraintTop_toBottomOf="@id/createBudgetButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
