<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_border"
    android:layout_margin="10dp"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateTransactionFragment"
        android:padding="20dp">

        <TextView
            android:id="@+id/datelbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/label_end_date"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/dateValueLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/datelbl"
            app:layout_constraintStart_toStartOf="parent"
            android:text=""/>

        <Button
            android:id="@+id/dateBtn"
            android:layout_width="wrap_content"
            android:minHeight="48dp"
            android:layout_height="wrap_content"
            android:text="@string/button_edit"
            app:layout_constraintTop_toTopOf="@id/datelbl"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/transactionAmountEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:minHeight="48dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/dateBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Spinner
            android:id="@+id/transactionCategorySpn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Category"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/transactionAmountEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/transactionNotesEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_notes"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactionCategorySpn"/>

        <Spinner
            android:id="@+id/transactionBudgetSpn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Category"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactionNotesEditText"/>

        <Button
            android:id="@+id/saveTransactionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/button_save_transaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactionNotesEditText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
